[package]
name = "utilities"
version = "0.1.0"
description = ""
edition = "2021"
license = "MIT"

[dependencies]
solana-program = {version = "~1.17"}
anchor-lang = {version = "~0.29", features = ["init-if-needed"]}
anchor-spl = {version = "~0.29"}
libreplex_mx = {version ="*", path="../../libreplex_mx"}
libreplex_fair_launch = {version = "0.7.0", features = ["no-entrypoint","cpi"]}
libreplex_shared = {version= "0.5.0", features=["no-entrypoint"] }
mpl-token-metadata = { version="~3" }
spl-token-2022 = {version = "~2.0", features = ["no-entrypoint"]}
solana-program-test = {version= "~1.17"}
solana-sdk= "~1.17"
spl-associated-token-account = "~2"


